--- a/client/src/RelatedItems/relatedItems.module.css
+++ b/client/src/RelatedItems/relatedItems.module.css
@@ -4,10 +4,17 @@
   grid-template-columns: 220px 220px 220px 220px;
   grid-template-rows: 300px;
   gap: 0px 0px;
+  padding: 10px;
 }
 .productCard {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 65% 35%;
   gap: 0px 0px;
+  padding: 8px;
+  border-style: solid;
+  border-width: 2px;
+}
+.productInfo {
+  margin: 10px;
 }
