Refactored reviews component to render properly using grid depending on the number of reviews and whether or not the more reviews button clicked; added a handleScroll event handler

--- a/client/src/RatingsAndReviews/RatingsAndReviews.module.css
+++ b/client/src/RatingsAndReviews/RatingsAndReviews.module.css
@@ -1,9 +1,9 @@
 
-/* div {
-  border-style: solid;
-} */
-
 .ratingsAndReviews {
   display: grid;
   grid-template-columns: 1fr 2fr;
+  grid-template-rows: 1fr 100px;
+  border: 1px solid black;
+  grid-gap: 10px;
+  width: 100%;
 }
