finished product cards display

--- a/client/src/RelatedItems/relatedItems.module.css
+++ b/client/src/RelatedItems/relatedItems.module.css
@@ -1,20 +1,27 @@
 
+#relatedItemsTitle {
+  padding: 0px;
+  margin: 20px 48px 5px;
+}
 #relatedProductsContainer {
   display: grid;
-  grid-template-columns: 220px 220px 220px 220px;
-  grid-template-rows: 300px;
+  grid-template-columns: 250px 250px 250px 250px 250px;
+  grid-template-rows: 350px;
   gap: 0px 0px;
-  padding: 10px;
+  padding: 0px;
+  margin: 20px 40px 20px;
 }
 .productCard {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 65% 35%;
   gap: 0px 0px;
-  padding: 8px;
+  padding: 6px;
   border-style: solid;
   border-width: 2px;
+  margin: 8px;
 }
-.productInfo {
-  margin: 10px;
+.productText {
+  padding: 0px;
+  line-height: 1px;
 }
