--- a/client/src/ProductOverview/product.module.css
+++ b/client/src/ProductOverview/product.module.css
@@ -68,14 +68,33 @@
 
 .thumbnailGallery {
   position: absolute;
+  height: 400px;
   left: 15px;
   z-index: 2;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
+  background: aliceblue;
 }
 
 .thumbnail {
-  width: 45px;
+  width: 55px;
+  padding: 5px;
+}
+
+.thumbnailActive {
+  width: 55px;
+  padding-top: 5px;
+  padding-right: 5px;
+  padding-left: 5px;
+  border-bottom: 5px solid red;
+}
+
+.down {
+  background: aliceblue;
+  cursor: pointer;
+  margin: 0 auto;
+  width: 24px;
 }
 
 .slide {
