--- a/client/src/RelatedItems/relatedItems.module.css
+++ b/client/src/RelatedItems/relatedItems.module.css
@@ -16,12 +16,18 @@
   grid-template-columns: 1fr;
   grid-template-rows: 65% 35%;
   gap: 0px 0px;
-  padding: 9px;
+  /* padding: 9px; */
   border-style: solid;
   border-width: 2px;
   margin: 8px;
 }
 .productText {
-  padding: 0px;
+  margin: 5px;
+  padding: 8px;
   line-height: 1px;
+}
+.img {
+  max-width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
