Added a 'I recommend this product' text and checkmark icon if the user has recommended the product in the reviewItem component

--- a/client/src/RatingsAndReviews/RatingsAndReviews.module.css
+++ b/client/src/RatingsAndReviews/RatingsAndReviews.module.css
@@ -2,7 +2,7 @@
 .ratingsAndReviews {
   display: grid;
   grid-template-columns: 1fr 2fr;
-  grid-template-rows: 1fr 100px;
+  grid-template-rows: 1fr;
   border: 1px solid black;
   grid-gap: 10px;
   width: 100%;
