--- a/client/src/RelatedItems/relatedItems.module.css
+++ b/client/src/RelatedItems/relatedItems.module.css
@@ -1,12 +1,26 @@
 
+#relatedItemsGrid {
+  display: grid;
+  grid-template-columns: 750px;
+  grid-template-rows: 50% 1fr;
+  gap: 0px 0px;
+}
 #relatedItemsTitle {
   padding: 0px;
   margin: 20px 48px 5px;
 }
+#yourOutfitContainer {
+  display: grid;
+  grid-template-columns: 250px 250px 250px 250px 250px;
+  grid-template-rows: 375px;
+  gap: 0px 0px;
+  padding: 0px;
+  margin: 20px 40px 20px;
+}
 #relatedProductsContainer {
   display: grid;
   grid-template-columns: 250px 250px 250px 250px 250px;
-  grid-template-rows: 350px;
+  grid-template-rows: 375px;
   gap: 0px 0px;
   padding: 0px;
   margin: 20px 40px 20px;
@@ -18,7 +32,7 @@
   gap: 0px 0px;
   /* padding: 9px; */
   border-style: solid;
-  border-width: 2px;
+  border-width: 1px;
   margin: 8px;
 }
 .productText {
@@ -30,4 +44,14 @@
   max-width: 100%;
   height: 100%;
   object-fit: cover;
+}
+.addOutfit {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 65% 35%;
+  gap: 0px 0px;
+  /* padding: 9px; */
+  border-style: solid;
+  border-width: 1px;
+  margin: 8px;
 }
