--- a/client/src/ProductOverview/product.module.css
+++ b/client/src/ProductOverview/product.module.css
@@ -15,7 +15,17 @@
 .description {
   padding: 5px;
 }
+.productTitle {
+  margin-top: 0;
+}
+.price {
+  margin: 20px 0;
+}
 
+.category {
+  text-transform: uppercase;
+  margin: 5px 0;
+}
 .features {
   padding: 15px 25px;
 }
