--- a/client/src/RelatedItems/relatedItems.module.css
+++ b/client/src/RelatedItems/relatedItems.module.css
@@ -1,7 +1,7 @@
 
 #relatedItemsGrid {
   display: grid;
-  grid-template-columns: 750px;
+  grid-template-columns: 1200px;
   grid-template-rows: 50% 1fr;
   gap: 0px 0px;
 }
@@ -16,6 +16,7 @@
   gap: 0px 0px;
   padding: 0px;
   margin: 20px 40px 20px;
+  overflow: auto;
 }
 #relatedProductsContainer {
   display: grid;
@@ -24,6 +25,7 @@
   gap: 0px 0px;
   padding: 0px;
   margin: 20px 40px 20px;
+  overflow: auto;
 }
 .productCard {
   display: grid;
