completes Trello Card

--- a/client/src/ProductOverview/product.module.css
+++ b/client/src/ProductOverview/product.module.css
@@ -52,6 +52,12 @@
   grid-column: span 2;
 }
 
+.strikeThrough {
+  text-decoration-line: line-through;
+}
+.salePrice {
+  color: red
+}
 /* image gallery styles */
 
 .galleryWrapper {
