--- a/client/src/RelatedItems/relatedItems.module.css
+++ b/client/src/RelatedItems/relatedItems.module.css
@@ -16,7 +16,7 @@
   gap: 0px 0px;
   padding: 0px;
   margin: 20px 40px 20px;
-  overflow: auto;
+  overflow: scroll;
 }
 #relatedProductsContainer {
   display: grid;
@@ -25,7 +25,7 @@
   gap: 0px 0px;
   padding: 0px;
   margin: 20px 40px 20px;
-  overflow: auto;
+  overflow: scroll;
 }
 .productCard {
   display: grid;
@@ -34,6 +34,13 @@
   gap: 0px 0px;
   /* padding: 9px; */
   border-style: solid;
+  border-width: 1px;
+  margin: 8px;
+}
+#addOutfitCard {
+  display: grid;
+  grid-template-columns: 1fr;
+  border-style: transparent;
   border-width: 1px;
   margin: 8px;
 }
