--- a/client/src/RatingsAndReviews/Reviews/CreateReview.module.css
+++ b/client/src/RatingsAndReviews/Reviews/CreateReview.module.css
@@ -23,10 +23,40 @@
 
 .headline {
   border: solid;
+
+}
+
+.headlineText {
+  width: 50%;
 }
 
 .reviewBody {
   border: solid;
 }
 
+.reviewBodyText {
+  height: 50%;
+  width: 50%;
+  display: block;
+}
+
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width:100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+}
+
+.modalMain {
+  position:fixed;
+  background: white;
+  width: 80%;
+  height: auto;
+  top:50%;
+  left:50%;
+  transform: translate(-50%,-50%);
+}
 
