--- a/client/src/RatingsAndReviews/Ratings/Ratings.module.css
+++ b/client/src/RatingsAndReviews/Ratings/Ratings.module.css
@@ -1,10 +1,31 @@
 
-
-
 .ratingsContainer {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 1fr;
+  grid-template-rows: 50px 100px 250px 250px;
   border: 1px solid black;
   height: 100%;
+  grid-gap: 10px;
 }
+
+.starRatingItem {
+  display: grid;
+  grid-template-columns: auto auto;
+  border: solid;
+}
+
+.numberRating {
+  margin-top: 20%;
+  text-align: center;
+  vertical-align: auto;
+  font-size: 40px;
+  font-weight: bold;
+  border: solid;
+}
+
+.starRating {
+  display: inline-block;
+  margin-top: 20%;
+  border: solid;
+}
+
