--- a/client/src/RatingsAndReviews/Reviews/ReviewItem.module.css
+++ b/client/src/RatingsAndReviews/Reviews/ReviewItem.module.css
@@ -3,48 +3,44 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: auto auto auto auto auto auto auto;
-  border: black solid;
   grid-gap: 5px;
-  justify-content: space-around
+  justify-content: space-around;
+  border-bottom : 1px solid;
 }
 
 .starRating {
-  border: solid;
+  padding-top: 10px;
 }
 
 .datePosted {
-  border: solid;
   text-align: right;
 }
 
 .boldedSummary {
+  padding: 10px;
   font-weight: bold;
-  border: solid;
   grid-column: span 2;
   padding-top: 5px;
 }
 
 .body {
+  padding: 10px;
   grid-column: span 2;
-  border: solid;
 }
 
 .recommendation {
   grid-column: span 2;
-  border: solid;
 }
 
 .responseActive {
   background-color: grey;
   grid-column: span 2;
-  border: solid;
 }
 
 .responseNormal {
   grid-column: span 2;
-  border: solid;
 }
 
 .helpful {
-  border: solid;
+  padding-bottom: 20px;
 }
