The review post can now accept a rating and recommended via radio buttons

--- a/client/src/RatingsAndReviews/Reviews/CreateReview.module.css
+++ b/client/src/RatingsAndReviews/Reviews/CreateReview.module.css
@@ -2,7 +2,7 @@
 .reviewFormContainer {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-rows: auto auto auto auto 1fr;
   border: solid
 }
 
