--- a/client/src/RatingsAndReviews/Ratings/StarFilter.module.css
+++ b/client/src/RatingsAndReviews/Ratings/StarFilter.module.css
@@ -1,12 +1,11 @@
 
 .starFilterContainer {
   display: grid;
-  grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
 }
 
 .starFilterItem {
   grid-template-rows: auto;
-
   margin: 5px;
 }
 
@@ -14,5 +13,5 @@
   text-align: center;
   text-decoration: underline;
   margin-right: 20px;
-
+  cursor: pointer;
 }
