--- a/client/src/RatingsAndReviews/Ratings/StarFilter.module.css
+++ b/client/src/RatingsAndReviews/Ratings/StarFilter.module.css
@@ -1,7 +1,7 @@
 
 .starFilterContainer {
   display: grid;
-  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 20px 20px;
 }
 
 .starFilterItem {
@@ -14,4 +14,14 @@
   text-decoration: underline;
   margin-right: 20px;
   cursor: pointer;
+}
+
+.recommendedPercentage {
+  padding-top: 10px;
+}
+
+.removeAllFilters {
+  padding-top: 10px;
+  cursor: pointer;
+  text-decoration: underline;
 }
