--- a/client/src/RatingsAndReviews/Reviews/CreateReview.module.css
+++ b/client/src/RatingsAndReviews/Reviews/CreateReview.module.css
@@ -1,8 +1,8 @@
 
 .reviewFormContainer {
   display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: auto auto auto auto 1fr;
+  grid-template-columns: auto;
+  grid-template-rows: auto auto auto auto auto auto auto 200px;
   border: solid
 }
 
@@ -27,6 +27,22 @@
 }
 
 .headlineText {
+  width: 50%;
+}
+
+.username {
+  border: solid;
+}
+
+.usernameText {
+  width: 50%;
+}
+
+.email {
+  border: solid;
+}
+
+.emailText {
   width: 50%;
 }
 
