last minute details

--- a/client/src/ProductOverview/product.module.css
+++ b/client/src/ProductOverview/product.module.css
@@ -49,6 +49,7 @@
 
 .strikeThrough {
   text-decoration-line: line-through;
+  color: black;
 }
 .salePrice {
   color: red
@@ -128,4 +129,10 @@
   position: absolute;
   right: 15px;
   top: 75px;
+}
+
+.reviewsLink {
+  text-decoration: underline;
+  display: inline;
+  font-size: small;
 }
