--- a/client/src/RatingsAndReviews/Ratings/StarFilter.module.css
+++ b/client/src/RatingsAndReviews/Ratings/StarFilter.module.css
@@ -17,11 +17,13 @@
 }
 
 .recommendedPercentage {
-  padding-top: 10px;
+  padding-top: 15px;
+  margin-top: 10px;
 }
 
 .removeAllFilters {
-  padding-top: 10px;
+  padding-top: 20px;
   cursor: pointer;
   text-decoration: underline;
+  padding-bottom: 50px;
 }
