--- a/client/src/RatingsAndReviews/Reviews/CreateReview.module.css
+++ b/client/src/RatingsAndReviews/Reviews/CreateReview.module.css
@@ -45,7 +45,7 @@
   background-color: #eee;
   border-radius: 5px;
   border: 1px solid #ddd;
-  margin: 0 0 20px 0;
+  margin: 0 0 10px 0;
   padding: 5px;
   box-sizing: border-box;
 }
@@ -97,7 +97,9 @@
   transform: translate(-50%,-50%);
   box-sizing: border-box;
   border-radius: 10px;
-  box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.2)
+  box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.2);
+  max-height: calc(100vh - 210px);
+  overflow-y: auto;
 }
 
 .addAReviewButton {
@@ -110,4 +112,22 @@
 
 .errorMessage {
   color: red;
+  font-size: smaller;
+  margin-top: 0;
+  padding-top: 0;
+  padding-bottom: 5px;
+}
+
+.note {
+  font-size: smaller;
+  color: rgb(82, 82, 82);
+  padding-bottom: 5px;
+}
+
+.formButton {
+  width: 30%;
+  height: 30px;
+  padding: 5px;
+  margin: 5px;
+  margin-left: 420px;
 }
